app-yaml/app1/03-nginx-deployment-apps1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-apps1-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-apps1
  template:
    metadata:
      labels:
        app: nginx-apps1
    spec:
      containers:
        - name: nginx
          image: nginx
          volumeMounts:
            - mountPath: /usr/share/nginx/html
              name: nginx-apps1-volume
      volumes:
        - name: nginx-apps1-volume
          persistentVolumeClaim:
            claimName: nginx-apps1-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-apps1-service
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: nginx-apps1
