app-yaml/app1/p443-only-mapping-with-dummy-ssl.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-apps1-ingresroute443
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`app1.deepen.in`)
      kind: Rule
      services:
        - name: nginx-apps1-service
          port: 80
